# payload

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.githooks/: pre-commit
docs/: CNAME  _config.yml  index.html
docs/_posts/: 2019-02-28-random-generators.md  2019-03-22-square-root-is-bad.md
maptest/: Cargo.toml
maptest/src/: main.rs
payload/assets/: README.md  tilesheet.ron
payload/benches/: rand.rs
payload/src/: lib.rs  map.rs  rand.rs  ship.rs
payload/src/rand/: xoshiro.rs
resources/: display_config.ron
src/: ai.rs  camera.rs  core.rs  fov.rs  lib.rs  main.rs  map.rs  player.rs  rand.rs  setup.rs  sprites.rs  ui.rs
src/core/: physics_groups.rs
src/fov/: fogofwar.rs  fov_update.rs  helpers.rs  viewable.rs
src/rand/: mod.rs  xoshiro.rs
